web/styles/userListPageStyle.css
/* ... */
.user-list-container table {
  border-collapse: collapse;
  text-align: center;
  border: 1px solid #e3e3e3;
  width: 100%;
  border-radius: 5px;
}

.user-list-container table th {
  padding: 10px;
}

.user-list-container table thead {
  background-color: #3b49df;
  color: #fff;
}

.user-list-container table tbody tr {
  border: 1px solid #e3e3e3;
}

.user-list-container table tbody td {
  padding: 10px 0px;
}

.user-list-container table tbody button {
  cursor: pointer;
  border: none;
  border-radius: 5px;
  padding: 8px 16px;
  font-size: 1rem;
  font-weight: 500;
  line-height: 1.5rem;
  transition: cubic(0.17, 0.67, 0.5, 0.71) 100ms;
}

.user-list-container .update-btn {
  background-color: #3b49df;
  color: #fff;
}

.user-list-container .update-btn:hover {
  background-color: #323ebe;
}

.user-list-container .ban-btn {
  background-color: #dc1818;
  color: #fff;
  width: 83px;
}

.user-list-container .ban-btn:hover {
  background-color: #af1414;
}

.user-list-container tbody td select {
  padding: 8px;
  border-radius: 5px;
}

.stupid-buttons {
  padding: 10px 0;
}

.stupid-buttons button {
  padding: 8px;
  border-radius: 20px;
  margin-right: 10px;
  border: 2px solid #3b49df;
  background-color: white;
  color: #3b49df;
  font-weight: 600;
  cursor: pointer;
}

/* toggle_sidebar */
/* toggle_sidebar */
/* toggle_sidebar */
@media screen and (max-width: 768px) {
  header .toggle_sidebar {
    display: inline-block;
    width: 40px;
    height: 40px;
    margin: 0 8px;
    display: flex;
    align-items: center;
    justify-content: center;
  }
  header .container_header {
    padding: 0;
  }
  header .container_left .container_searchBar {
    position: relative;
    width: 360px;
    margin: 0 1rem;
  }
  header .container_left .container_searchBar {
    position: relative;
    /* width: 100px; */
    display: none;
    margin: 0 1rem;
    /* height: 40px; */
  }

  header .container_right .container_button_login {
    display: none;
  }
  .main .main_container_left {
    display: none;
    padding: 0 0.5rem;
  }

  .main .container_main {
    padding: 0.5rem 0;
  }

  .main .main_container_middle {
    width: 100%;
    padding: 0 12px;
  }

  .main
    .main_container_middle
    .container_posts
    .container_info_post
    .post_info
    .title_post {
    font-size: 24px;
  }

  .container_right .container_button_register {
    display: none;
  }
}

/* style cho việc loading */
.loader {
    border: 16px solid #f3f3f3; /* Light grey */
    border-top: 16px solid #3498db; /* Blue */
    border-radius: 50%;
    width: 120px;
    height: 120px;
    margin: 0 auto;
    margin-top: 30px;
    animation: spin 2s linear infinite;
}

@keyframes spin {
  0% { transform: rotate(0deg); }
  100% { transform: rotate(360deg); }
}

/* style cho việc xổ xuống phần filt (dropdown filt) */
.Filtering {
  margin-top: 10px;
}

/*Styling Selectbox*/
.dropdown_filt {
  width: 150px;
  display: inline-block;
  background-color: #fff;
  border-radius: 2px;
  box-shadow: 0 0 2px rgb(204, 204, 204);
  transition: all .5s ease;
  position: relative;
  font-size: 14px;
  color: #474747;
  height: 100%;
  text-align: left;
  border-radius: 5px;
  margin-right: 3px;
}
.dropdown_filt .select_filt {
    cursor: pointer;
    display: block;
    padding: 10px
}
/* NO
.dropdown_filt .select_filt > i {
    font-size: 13px;
    color: #888;
    cursor: pointer;
    transition: all .3s ease-in-out;
    float: right;
    line-height: 20px
}
*/
.dropdown_filt:hover {
    box-shadow: 0 0 4px rgb(204, 204, 204)
}
.dropdown_filt:active {
    background-color: #f8f8f8
}
.dropdown.active:hover,
.dropdown.active {
    box-shadow: 0 0 4px rgb(204, 204, 204);
    border-radius: 2px 2px 0 0;
    background-color: #f8f8f8
}
/* NO
.dropdown.active .select > i {
    transform: rotate(-90deg)
}*/
.dropdown_filt .dropdown-menu {
    position: absolute;
    background-color: #fff;
    width: 100%;
    left: 0;
    margin-top: 1px;
    box-shadow: 0 1px 2px rgb(204, 204, 204);
    border-radius: 0 1px 2px 2px;
    overflow: hidden;
    display: none;
    max-height: 144px;
    overflow-y: auto;
    z-index: 9
}
.dropdown_filt .dropdown-menu li {
    padding: 10px;
    transition: all .2s ease-in-out;
    cursor: pointer
} 
.dropdown_filt .dropdown-menu {
    padding: 0;
    list-style: none
}
.dropdown_filt .dropdown-menu li:hover {
    background-color: #f2f2f2
}
.dropdown_filt .dropdown-menu li:active {
    background-color: #e2e2e2
}

